<resources>
    <string name="app_name">Voltes V Strike</string>
    <string name="game_title">VOLTES V</string>
    <string name="game_subtitle">SUPER ROBOT STRIKE</string>
    <string name="splash_branding_description">Voltes V: Super Robot Strike branding</string>
    <string name="splash_loading">LOADING...</string>

    <string name="menu_start_game">START GAME</string>
    <string name="menu_how_to_play">HOW TO PLAY</string>
    <string name="menu_high_score">HIGH SCORE</string>
    <string name="menu_exit">EXIT</string>

    <string name="machine_selection_title">SELECT VOLT MACHINE</string>
    <string name="machine_selection_placeholder">Choose your Volt Machine.</string>
    <string name="action_continue">CONTINUE</string>
    <string name="action_back">Back</string>
    <string name="action_select">SELECT</string>
    <string name="action_selected">SELECTED</string>
    <string name="machine_volt_crewzer">VOLT CREWZER</string>
    <string name="machine_volt_bomber">VOLT BOMBER</string>
    <string name="machine_volt_panzer">VOLT PANZER</string>
    <string name="machine_volt_frigate">VOLT FRIGATE</string>
    <string name="machine_volt_lander">VOLT LANDER</string>
    <string name="pilot_steve_armstrong">Pilot: Steve Armstrong</string>
    <string name="pilot_mark_gordon">Pilot: Mark Gordon</string>
    <string name="pilot_big_bert_armstrong">Pilot: Big Bert Armstrong</string>
    <string name="pilot_little_jon_armstrong">Pilot: Little Jon Armstrong</string>
    <string name="pilot_jamie_robinson">Pilot: Jamie Robinson</string>
    <string name="machine_stat_speed">SPEED</string>
    <string name="machine_stat_attack">ATTACK</string>
    <string name="machine_type_label">TYPE:</string>
    <string name="machine_stat_value">%1$d/5</string>
    <string name="machine_type_fast">FAST</string>
    <string name="machine_type_balanced">BALANCED</string>
    <string name="machine_type_power">POWER</string>
    <string name="machine_type_support">SUPPORT</string>

    <string name="difficulty_title">SELECT DIFFICULTY</string>
    <string name="difficulty_placeholder">Screen foundation ready. Difficulty behavior will be implemented in a later task.</string>
    <string name="difficulty_selected_machine">SELECTED MACHINE</string>
    <string name="difficulty_easy">EASY</string>
    <string name="difficulty_easy_subtitle">FOR NEW PLAYERS</string>
    <string name="difficulty_easy_description">Slower enemies • fewer enemy bullets</string>
    <string name="difficulty_normal">NORMAL</string>
    <string name="difficulty_normal_subtitle">RECOMMENDED • BALANCED</string>
    <string name="difficulty_normal_description">Balanced enemy speed and spawn rate</string>
    <string name="difficulty_hard">HARD</string>
    <string name="difficulty_hard_subtitle">FOR EXPERIENCED PLAYERS</string>
    <string name="difficulty_hard_description">Faster enemies • more enemy bullets</string>
    <string name="action_start_mission">START MISSION</string>

    <string name="how_to_play_title">HOW TO PLAY</string>
    <string name="how_to_play_placeholder">Instructions will be implemented in a later task.</string>

    <string name="high_score_title">HIGH SCORE</string>
    <string name="high_score_personal_best">PERSONAL BEST</string>
    <string name="high_score_back">BACK</string>

    <string name="gameplay_title">GAMEPLAY</string>
    <string name="gameplay_placeholder">Gameplay foundation ready.
GameView and gameplay systems will be implemented in a later task.</string>
    <string name="game_foundation_title">VOLTES V - GAME FOUNDATION</string>
    <string name="game_foundation_machine">Machine: %1$s</string>
    <string name="game_foundation_difficulty">Difficulty: %1$s</string>
    <string name="game_foundation_running">GameView Running</string>

    <string name="game_hud_score_label">SCORE</string>
    <string name="game_hud_lives_label">LIVES</string>
    <string name="game_pause_title">PAUSED</string>
    <string name="game_pause_resume">RESUME</string>
    <string name="game_pause_restart">RESTART MISSION</string>
    <string name="game_pause_change_machine">CHANGE MACHINE</string>
    <string name="game_pause_main_menu">MAIN MENU</string>
    <string name="game_pause_button_description">Pause game</string>
    <string name="game_resume_button_description">Resume game</string>
    <string name="game_restart_button_description">Restart mission</string>
    <string name="game_change_machine_button_description">Change Volt Machine</string>
    <string name="game_main_menu_button_description">Return to main menu</string>
    <string name="game_skill_crewzer">OVERDRIVE</string>
    <string name="game_skill_bomber">BOMB</string>
    <string name="game_skill_bomber_charges">BOMB &#215;%1$d</string>
    <string name="game_skill_bomber_cooldown">BOMB &#215;0&#10;%1$d</string>
    <string name="game_skill_bomber_ready_description">Launch Bombardment bomb, %1$d charges remaining</string>
    <string name="game_skill_bomber_cooldown_description">Bombardment reloading, %1$d seconds remaining</string>
    <string name="game_skill_panzer">POWER</string>
    <string name="game_skill_frigate">TWIN SHOT</string>
    <string name="game_skill_lander">SHIELD</string>
    <string name="game_skill_button_ready">%1$s&#10;READY</string>
    <string name="game_skill_button_timer">%1$s&#10;%2$d</string>
    <string name="game_skill_button_ready_description">Activate %1$s</string>
    <string name="game_skill_button_active_description">%1$s active, %2$d seconds remaining</string>
    <string name="game_skill_button_cooldown_description">%1$s recharging, %2$d seconds remaining</string>

    <string name="game_over_title">GAME OVER</string>
    <string name="game_over_final_score">FINAL SCORE</string>
    <string name="game_over_high_score">HIGH SCORE</string>
    <string name="game_over_new_high_score">NEW HIGH SCORE!</string>
    <string name="game_over_play_again">PLAY AGAIN</string>
    <string name="game_over_main_menu">MAIN MENU</string>
    <string name="game_over_run_summary">%1$s &#8226; %2$s</string>
</resources>
