<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/screen_padding"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/game_title"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/content_spacing"
        android:gravity="center"
        android:text="@string/game_subtitle"
        android:textSize="18sp" />

    <Button
        android:id="@+id/start_game_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/content_spacing"
        android:minHeight="@dimen/button_min_height"
        android:text="@string/menu_start_game" />

    <Button
        android:id="@+id/how_to_play_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/button_min_height"
        android:text="@string/menu_how_to_play" />

    <Button
        android:id="@+id/high_score_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/button_min_height"
        android:text="@string/menu_high_score" />

    <Button
        android:id="@+id/exit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/button_min_height"
        android:text="@string/menu_exit" />

</LinearLayout>
